# IDAEA

./: $  .gitignore  LICENSE  TODO.txt  pyproject.toml  requirements.txt
src/: database.py  example.env  main.py  password.py
src/static/: style.css
src/templates/: admin.html  base.html  feedback.html  grades.html  home.html  login.html
